實作第一層路由的第二個元件-建立超連結

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,11 @@
   {{title}}
 </h1>
 <hr>
+<ul>
+  <li><a [routerLink]="['/']">Home</a></li>
+  <li><a [routerLink]="['/page2']">Page2</a></li>
+  <!--Example Other way-->
+  <!--<li><a routerLink="/">Home</a></li>
+  <li><a routerLink="/page2">Page2</a></li>-->
+</ul>
 <router-outlet></router-outlet>
