路由連結如何套用 routerLinkActive & 套用 Active 樣式

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,11 @@
 </h1>
 <hr>
 <ul>
-  <li><a [routerLink]="['/']">Home</a></li>
-  <li><a [routerLink]="['/page2']">Page2</a></li>
+  <li><a [routerLink]="['/']" [routerLinkActive]="'active'" [routerLinkActiveOptions] = "{exact: true}">Home</a></li>
+  <li><a [routerLink]="['/page2']" [routerLinkActive] = "'active'" [routerLinkActiveOptions] = "{exact: true}">Page2</a></li>
+  <!--Example2
+  <li><a [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions] = "{exact: true}">Home</a></li>
+  <li><a [routerLink]="['/page2']" routerLinkActive = "active" [routerLinkActiveOptions] = "{exact: true}">Page2</a></li>-->
   <!--Example Other way-->
   <!--<li><a routerLink="/">Home</a></li>
   <li><a routerLink="/page2">Page2</a></li>-->
